syntax = "proto3";

option go_package = "common/communication/protocol";

message FragmentIdentifier {
    uint32 taskNumber = 1;
    uint32 taskFragmentNumber = 2;
}

message StageFragment {
    FragmentIdentifier start = 1;
    FragmentIdentifier end = 2;
    bool lastFragment = 3;
}

message RingEOF {
    string stage = 1;
    string eofType = 2;
    string creatorId = 3;
    string readyId = 4;
    uint32 tasksCount = 5;
    uint32 roundNumber = 6;
    repeated StageFragment stageFragmentes = 7;
    repeated string nextStageWorkerParticipantIds = 8;
}